# crazymail

./: .current_email  .env.example  .gitignore  AGENTS.md  AGENTS_claude修改和优化.md  DOD.md  HERMES_OPENCODE_METHODOLOGY.md  LOVABLE_PROMPT.md  SEO_GEO_GUIDE.md  STRATEGY.md  pyproject.toml  requirements.txt
.hermes/plans/: 20260611_180000-phase1-content-pipeline.md  20260611_190000-phase1-mvp.md  20260612-iteration-v1.1.md  20260612-opencode-tasks.md
ADR/: ADR-001-战略调整.md  ADR-002-crewai-langgraph-hybrid.md  ADR-003-yaml-agent-config.md  ADR-004-soulspec-persona.md
api/01_20260519_temporarymail.com_REST-API/: 01_20260519_temporarymail_V2_UPGRADE_SUMMARY.md  temporarymail_client_v2.py
api/02_20260519_tempimail.org_REST-API/: 02_20260519_tempimail_API_DOCUMENTATION.md
api/04_20260520_temp-mail.io_REST-API/: 04_20260520_tempmailio_COMPLIANCE_REPORT.md  tempmailio_client.py
api/05_20260520_mail.tm_REST-API/: 05_20260520_mailtm_API_DOCUMENTATION.md  05_20260520_mailtm_README.md  05_20260520_mailtm_REAL_EMAIL_TEST.md  mailtm_client.py
api/06_20260520_mailfence.com_Automation/: INDEX.md  README.md  mailfence_automation.py  send_mailtm_test_email.py
backend/: config.py  main.py
docs/: CONTENT_PRODUCTION_FLOW.md  DOCUMENT_INDEX.md  E2E_TEST_REPORT.md  KEYWORD_RESEARCH.md  METHODOLOGY_FRAMEWORK.md  METHODOLOGY_LESSONS.md  OPERATION_MANUAL.md  article-outline-01.md  article-outline-02.md  article-outline-03.md  article-outline-04.md  article-outline-05.md  article-outline-06.md
frontend/: package-lock.json
tests/: test_e2e_email.py  test_e2e_tempmail.py
(+113 files in other folders)
